--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,7 @@ body {
 
 section {
   padding: 3.9rem 0;
+  overflow: hidden;
 }
 
 img {
@@ -398,7 +399,7 @@ footer {
 }
 
 .footer-content {
-  /* overflow: hidden */
+  overflow: hidden;
 }
 
 .footer-content h4 {
